--- a/about/css/about.css
+++ b/about/css/about.css
@@ -182,6 +182,7 @@ h4 {
   font-weight: 100;
   letter-spacing: 1px;
   display: inline-block;
+  transition: all 1s;
 }
 .pin {
   position: relative;
